# phone-validator

./: .env  Dockerfile  Makefile  README.md  docker-compose.yml  grafana-dashboard.json  prometheus.yml  pyproject.toml  routes.py  sector_service.yml  server.py  services.py  services_test.py
backend/: in_memory.py  mongo.py  postgres.py  postgres_async.py  postgres_async_pool.py  postgres_async_singleton.py  postgres_databases.py  redis.py  trie.py
loadtest/: results.sh  run.sh
